✨ ログイン後/一覧画面の大枠実装
