# backend/app/controllers/api/v1/review_posts_controller.rb
@@ -2,10 +2,19 @@
 
 module Api
   module V1
-    class PostsController < ApplicationController
+    class ReviewPostsController < ApplicationController
       before_action :authenticate_user, only: %i[create]
 
-      def index; end
+      def index
+        ReviewPost.all.each do |review_post|
+          @languages = review_post.languages.map(&:name)
+        end
+        @review_posts = ReviewPost.all.map(&:attributes)
+        @review_posts.each do |review_post|
+          review_post['languages'] = @languages
+        end
+        render json: @review_posts, status: :ok
+      end
 
       def show; end
 
@@ -16,13 +25,13 @@ module Api
         pull_request_title = params[:pull_request_title]
         pull_request_url = params[:pull_request_url]
         pull_request_description = params[:pull_request_description]
-        post_params = { reviewee_id: id, title: title, review_point: review_point }
+        review_post_params = { reviewee_id: id, title: title, review_point: review_point }
         pull_request_params = { pull_request_title: pull_request_title, pull_request_url: pull_request_url,
                                 pull_request_description: pull_request_description }
-        @post = Post.new(post_params.merge(pull_request_params))
-        if @post.save
+        @review_post = ReviewPost.new(review_post_params.merge(pull_request_params))
+        if @review_post.save
           params[:languages].each do |language|
-            @post.languages.create(language: language)
+            @review_post.languages.create(name: language)
           end
           render status: :created
         else
