# backend/app/models/review_post.rb
@@ -1,8 +1,8 @@
 # frozen_string_literal: true
 
-class Post < ApplicationRecord
+class ReviewPost < ApplicationRecord
   belongs_to :reviewee, class_name: 'User', optional: true
   belongs_to :reviewer, class_name: 'User', optional: true
-  has_many :post_languages, dependent: :destroy
-  has_many :languages, through: :post_languages
+  has_many :review_post_languages, dependent: :destroy
+  has_many :languages, through: :review_post_languages
 end
