# backend/app/models/review_post_language.rb
@@ -1,0 +1,6 @@
+# frozen_string_literal: true
+
+class ReviewPostLanguage < ApplicationRecord
+  belongs_to :review_post
+  belongs_to :language
+end
